--- a/graphic-profile.css
+++ b/graphic-profile.css
@@ -15,6 +15,61 @@ body {
     padding: 20px;
 }
 
+
+.light-mode {
+    background-color: #f1f1f1; /* Light theme for readability */
+    color: #1e1e1e; /* Dark text for contrast */
+}
+
+.light-mode nav, .light-mode footer{
+    background-color: #ddd; /* Lighter navbar background */
+}
+
+.light-mode .card {
+    background-color: #fff; /* Lighter card background */
+    color: #000; /* Dark text for contrast */
+}
+
+.light-mode section {
+    background-color: #f1f1f1; /* Lighter section background */
+}
+
+.light-mode .logo-container img{
+    background-color: #ddd;
+}
+
+.light-mode section p {
+    color: #333; /* Dark text for contrast */
+}
+
+.light-mode .hero {
+    background: rgba(255, 255, 255, 0.5); /* Light overlay */
+}
+
+#darkModeToggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #333;
+    border-radius: 50%;
+    padding: 12px;
+    border: none;
+    font-size: 1.5rem;
+    color: #f1f1f1;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    z-index: 1000; /* Ensure it's on top */
+}
+
+#darkModeToggle:hover {
+    background-color: #f1c40f;
+    transform: scale(1.2);
+}
+
+#darkModeToggle:focus {
+    outline: none;
+}
+
 /* Navigation styles */
 nav {
     position: fixed;
@@ -62,6 +117,7 @@ header {
     letter-spacing: 3px;
     color: #f1c40f;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
 }
 
 /* Section styles */
@@ -154,6 +210,67 @@ header {
     background-color: #e1b90f;
     transform: scale(1.05);
 }
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+
+.example-container {
+    display: flex;
+    justify-content: center;
+}
+
+.example-link-container {
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    width: fit-content;
+    padding: 2px 12px;
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.example-link-container a {
+    text-decoration: none;
+    color: #aaa;
+    font-size: 1.2rem;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+} 
+
+.example-link-container a:hover {
+    color: #f1c40f;
+    transform: scale(1.1);
+}
+
+img {
+    max-width: 100%; /* Responsive images */
+}
+
+.img-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    gap: 20px;
+}
+
+.img-container img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
 
 /* Footer styles */
 footer {
