--- a/style.css
+++ b/style.css
@@ -31,6 +31,19 @@ body {
     background: rgba(255, 255, 255, 0.5); /* Light overlay */
 }
 
+.light-mode section {
+    background-color: #f1f1f1;
+}
+
+.light-mode .team-member {
+    background-color: #c4c2c2;
+    color: #1e1e1e;
+}
+
+.light-mode section p {
+    color: #333; /* Darker text for const*/
+}
+
 #darkModeToggle {
     position: fixed;
     top: 20px;
@@ -348,6 +361,7 @@ footer p {
     justify-content: center;
     gap: 20px;
     margin-top: 30px;
+    /*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); */
 }
 
 .team-member {
@@ -362,40 +376,6 @@ footer p {
     margin-top: 10px;
     font-weight: bold;
     color: #f1f1f1;
-}
-
-.graphic-hero {
-    height: 80vh;
-    background-image: url('about-background.jpg'); /* Background image| Ill use a dark and mysterius one*/
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: #f1f1f1;
-    position: relative;
-}
-
-.graphic-hero::before {
-    content: "";
-    position: absolute;
-    top: 0; left: 0; width: 100%; height: 100%;
-    background: rgba(0, 0, 0, 0.6); /* Dark overlay */
-    z-index: 1; /* Ensures it stays behind the text */
-}
-
-.graphic-hero-content {
-    position: relative;
-    z-index: 2;
-}
-
-.graphic-hero h1 {
-    font-size: 4rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    text-shadow: 0 0 10px rgba(241, 196, 15, 0.8);
 }
 
 /* Responsive styles */
